live-build/config/includes.chroot/etc/ufw/user6.rules
*filter
:ufw6-user-input - [0:0]
:ufw6-user-output - [0:0]
:ufw6-user-forward - [0:0]
:ufw6-before-logging-input - [0:0]
:ufw6-before-logging-output - [0:0]
:ufw6-before-logging-forward - [0:0]
:ufw6-user-logging-input - [0:0]
:ufw6-user-logging-output - [0:0]
:ufw6-user-logging-forward - [0:0]
:ufw6-after-logging-input - [0:0]
:ufw6-after-logging-output - [0:0]
:ufw6-after-logging-forward - [0:0]
:ufw6-logging-deny - [0:0]
:ufw6-logging-allow - [0:0]
### RULES ###

### tuple ### allow tcp 53317 ::/0 any fc00::/7 in comment=5a455441205368617265
-A ufw6-user-input -p tcp --dport 53317 -s fc00::/7 -j ACCEPT

### tuple ### allow udp 53317 ::/0 any fc00::/7 in comment=5a455441205368617265
-A ufw6-user-input -p udp --dport 53317 -s fc00::/7 -j ACCEPT

### tuple ### allow tcp 53317 ::/0 any fe80::/10 in comment=5a455441205368617265
-A ufw6-user-input -p tcp --dport 53317 -s fe80::/10 -j ACCEPT

### tuple ### allow udp 53317 ::/0 any fe80::/10 in comment=5a455441205368617265
-A ufw6-user-input -p udp --dport 53317 -s fe80::/10 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw6-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw6-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw6-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw6-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw6-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###
COMMIT
